Bug 729845 - Disabled attribute shouldn't apply to all HTML elements. r=bz